[package]
name = "lld_rs"
version = "140.0.0"
authors = ["The Mun Team <team@mun-lang.org>"]
edition = "2021"
description = "Bindings for LLD"
readme = "README.md"
homepage = "https://github.com/mun-lang/lld-rs"
repository = "https://github.com/mun-lang/lld-rs"
license = "MIT OR Apache-2.0"
keywords = ["lld", "llvm"]
categories = ["linkers", "compilers"]

[dependencies]
libc = "0.2.138"

[build-dependencies]
cc = "1.0"
lazy_static = "1.4"
regex = "1.7"
semver = "1.0"
